# ota-diagnostics-simulator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
ota_simulator/: __init__.py  api.py  domain.py  repository.py  scenarios.py  service.py  updater.py
ota_simulator/static/: app.js  index.html  styles.css
tests/: conftest.py  test_updater.py
tests/e2e/: test_dashboard.py
tests/integration/: test_api.py  test_repository_concurrency.py  test_service.py
tests/unit/: test_domain.py  test_updater.py
